Add title to item show page, add an end of the page to item show, add title notation to top item of item index
Add an end of the page page to items show

Add title notation to the top of item index page.

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,5 @@
+<h1>The Start of the Page</h1>
+
 <div class='items-container'>
   <% @items.each.with_index do |item, index| %>
     <div class="items items-<%= index %>">
