--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,5 @@
+
+<h1><%= @itam.title %></h1>
 <div class='item-show-container'>
   <div class='item-show'>
     <div class='img'>
@@ -27,3 +29,4 @@
     </div>
   </div>
 </div>
+<h2>This is the end of the page.</h2>
